Remove unnecessary tasks and libraries